# tdd-for-embedded-c

./: .gitignore  Makefile  MakefileUnity.mk  meson.build
IO/: meson.build
IO/include/: Flash.h  IO.h  MicroTime.h  m28w160ect.h
IO/src/: Flash.c  IO.c  meson.build
IO/test/: FlashTest.cpp  meson.build
IO/test/mocks/: FakeMicroTime.c  FakeMicroTime.h  MockIO.c  MockIO.h  meson.build
home_automation/: Dockerfile  meson.build  start_dev_container.py
home_automation/include/: LightController.h  LightScheduler.h  RandomMinute.h  TimeService.h
home_automation/src/: LightScheduler.c  RandomMinute.c  meson.build
home_automation/test/: FakeTimeService.c  FakeTimeService.h  FakeTimeServiceTest.cpp  LightControllerSpy.c  LightControllerSpy.h  LightControllerSpyTest.cpp  LightSchedulerRandomizeTest.cpp  LightSchedulerTest.cpp  RandomMinuteTest.cpp  meson.build
include/: LightController.h  hello.h  led_driver.h
include/led_driver/: led_driver.h
led_driver/include/: runtime_error.h
led_driver/test/: all_tests.c
led_driver/test/led_driver/: led_driver_test.c  led_driver_test_runner.c
led_driver/test/mocks/: runtime_error_stub.c
src/: LightScheduler.c  hello.c
src/led_driver/: led_driver.c
test/: FakeTimeService.c  LightControllerSpy.c  LightControllerSpyTest.cpp  hello_test.cpp
test/led_driver/: led_driver_test.c  led_driver_test_runner.c
test/mocks/: runtime_error_stub.h
util/: meson.build
util/include/: CircularBuffer.h  Utils.h
util/mocks/: FormatOutputSpy.c  meson.build
util/src/: CircularBuffer.c  Utils.c  meson.build
util/tests/: CircularBufferPrintTest.cpp  meson.build
util/tests/mocks/: FormatOutputSpy.h  FormatOutputSpyTest.cpp  meson.build
