test_doubles = files('FakeTimeservice.c', 'LightControllerSpy.c')
test_runner = files('TestRunner.cpp')
fake_time_service_tests = files('FakeTimeServiceTest.cpp')
light_controller_spy_tests = files('LightControllerSpyTest.cpp')
light_scheduler_tests = files('LightSchedulerTest.cpp')
random_minute_tests = files ('RandomMinuteTest.cpp')